--- a/css/styles.css
+++ b/css/styles.css
@@ -98,6 +98,18 @@ button:hover {
     font-size: 16px;
 
 }
+
+.ozellik {
+    display: block;
+    color: #2E2F42;
+    font-family: "roboto";
+    font-weight: "medium";
+    font-size: 20px;
+    line-height: 24px;
+    letter-spacing: 2%;
+    text-align: center;
+    
+}
 .ourteam {
     display: flex;
     background-color: #F4F4FD;
@@ -110,7 +122,19 @@ button:hover {
     background-color: #F4F4FD;
 }
 .ourport {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    
+}   
+
+.border{
+    border: 1px solid #e7e9fc;
+    padding: 10px;
+    text-align: center;
 }
 h2 {
     color: #2E2F42;
